name:                cabal-mon
version:             0.1.0.0
synopsis:            A monitor for cabal builds
license:             MIT
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable cabal-mon
  main-is:             CabalMon.hs
  build-depends:
    base,
    vty,
    simple-get-opt,
    containers,
    filepath,
    process,
    directory
  GHC-options: -threaded
  default-language:    Haskell2010
